--- a/index2.html
+++ b/index2.html
@@ -39,7 +39,7 @@
         var config = {
             routerViewId: 'routerView', // 路由切换的挂载点 id
             stackPages: true, // 多级页面缓存
-            animationName: "slide", // 切换页面时的动画
+            animationName: "fade", // 切换页面时的动画
             routes: [{
                 path: "/home",
                 name: "home",
